# plan-app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECTS.md  README.md  alembic.ini  code-review-findings.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  ruff.toml  tsconfig.json
Vault/: Inbox.md  Projects.md  Welcome.md
alembic/: env.py
app/: __init__.py  main.py
docs/: ARCHITECTURE.md  CHANGELOG.md  HANDOFF-2026-05-09-v2.md  HANDOFF-2026-05-09-v3.md  HANDOFF-2026-05-09-v4.md  HANDOFF-2026-05-09-v5.md  HANDOFF-2026-05-09-v6.md  HANDOFF-2026-05-09-v7.md  HANDOFF-2026-05-09-v8.md  HANDOFF-2026-05-09-v9.md  HANDOFF-2026-05-09.md  HANDOFF-2026-05-10-v10.md  HANDOFF-2026-05-10-v11.md  HANDOFF-2026-05-10-v12.md  HANDOFF-2026-05-10-v13.md  HANDOFF-2026-05-10-v14.md  HANDOFF-2026-05-11-v15.md  HANDOFF-2026-05-11-v16.md  HANDOFF-2026-05-11-v17.md  HANDOFF-2026-05-11-v18.md  HANDOFF-2026-05-11-v19.md  HANDOFF.md  IDEAS.md  PHASE5-TEST-PLAN.md  PHASE5-TEST-REPORT.md  PLAN.md  PROGRESS.md  PROMPT-FOR-NEXT-SESSION.md  README.md  RENDER.md  REVIEW-2026-05-09-v2.md  REVIEW-2026-05-09.md  REVIEW-2026-05-10.md  REVIEW-findings.md  ROADMAP.md  plan-python-detailed (2).md
memory/: README.md
miniapp/: package-lock.json  package.json
prisma/: schema.prisma
public/: index.html
tests/: conftest.py  test_api_auth.py  test_api_endpoints.py  test_callbacks.py  test_classifier.py  test_commands.py  test_courier.py  test_critic.py  test_delete_task_fk.py  test_digest.py  test_e2e_phase4.py  test_e2e_pipeline.py  test_smoke.py  (+28 more)
(+231 files in other folders)
