[project]
name = "plan-app"
version = "0.0.0"
description = "AI-powered Telegram task planning bot (Russian-first)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Itosyro" }]

dependencies = [
    # web / bot
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiogram>=3.13",
    "httpx>=0.27",
    # data
    "sqlmodel>=0.0.22",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # ai
    "groq>=0.13",
    "instructor>=1.7",
    # russian nlp
    "dateparser>=1.2",
    "pymorphy3>=2.0",
    "razdel>=0.5",
    # observability
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "types-dateparser>=1.2",
    "aiosqlite>=0.20",
    "respx>=0.21",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]
